--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="join_button">Join</string>
     <string name="create_button">Create</string>
     <string name="edit_field_groups">Name of a group</string>
+    <string name="settings_label">Settings</string>
 </resources>
