--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="create_button">Create</string>
     <string name="edit_field_groups">Name of a group</string>
     <string name="settings_label">Settings</string>
+    <string name="tour_mode_label">Tour Mode</string>
+    <string name="ar_button">Go to AR view</string>
 </resources>
