--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="settings_label">Settings</string>
     <string name="tour_mode_label">Tour Mode</string>
     <string name="ar_button">Go to AR view</string>
+    <string name="challenge_button">Challenge 1</string>
 </resources>
